unpackaged/objects/copado__TestTool__mdt.object
<CustomObject>
	<fields>
		<fullName>copado__Automate_Test_Readiness__c</fullName>
		<defaultValue>false</defaultValue>
		<inlineHelpText>If ticked, test records created in the Test object or as a quality gate are automatically marked as Ready to Run. No manual configuration is required before their execution.</inlineHelpText>
		<label>Automate Test Readiness</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copado__JobTemplate__c</fullName>
		<label>Job Template</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__TestType__c</fullName>
		<label>Test Type</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Test_Readiness_Logic__c</fullName>
		<inlineHelpText>API Name of the apex class that validates if the test configuration is complete and ready to run. This validation is triggered when a user tries to mark the test as Ready to Run. If the validation fails, the test cannot be marked as Ready To Run until the user completes the missing configuration. The apex class must inherit the interface with name “TestReadinessInterface”.</inlineHelpText>
		<label>Test Readiness Logic</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__UserStoryBundleTestsUnifierLogic__c</fullName>
		<inlineHelpText>API Name of the apex class that unifies all the tests record related to user stories that are bundled. The apex class must extend the class with name “UserStoryBundleTestsUnifier”.</inlineHelpText>
		<label>User Story Bundle Tests Unifier Logic</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<label>Test Tool</label>
	<pluralLabel>Test Tools</pluralLabel>
</CustomObject>